<resources>
    <string name="app_name">2048</string>
    <string name="_2048_menu">2048 Menu</string>
    <string name="empty_square">empty square</string>
    <string name="main_instructions">Join the numbers to get to the 2048 tile!</string>
    <string name="_2048">2048</string>
    <string name="undo">UNDO</string>
    <string name="new_game">NEW</string>
    <string name="score">SCORE</string>
    <string name="best">BEST</string>
    <string name="default_score">0</string>
    <string name="keep_going">Keep going</string>
    <string name="try_again">Try again</string>
    <string name="share">Share</string>
    <string name="made_by_benjamin_phillips">made by Benjamin Phillips</string>
    <string name="classic_play">Classic play</string>
    <string name="time_trial">Time trial</string>
    <string name="sounds_on">Sounds ON</string>
    <string name="undo_on">Undo ON</string>
    <string name="swipe_anywhere_off">Swipe Anywhere OFF</string>
    <string name="how_to_play">How to play</string>
    <string name="back">back</string>
    <string name="statistics_info_text">All play statistics are cumulative across all games played.
        They include:\n\nBest Score - Your highest score from any game. \n\nTotal Score - Your total
        cumulative score across all completed games. \n\nTop Tile - The highest value tile that you
        have reached. \n\nAdditional statistics are revealed as higher value tiles are unlocked
        beginning with 512: \n\nGames Reached - Total games for which you reached this tile. (Note,
        reaching the same tile value multiple times within a single game only counts as one.) \n\n
        Shortest Time - Your shortest time to reaching a tile.\n\nFewest Moves - Your shortest moves
        to reaching a tile.</string>
    <string name="statistics_info">Statistics Info</string>
    <string name="classic_stats">Classic Stats</string>
    <string name="all_play">All Play</string>
    <string name="best_score">Best Score</string>
    <string name="total_score">Total Score</string>
    <string name="top_tile">Top Tile</string>
    <string name="games_reached">Games Reached</string>
    <string name="fewest_moves">Fewest Moves</string>
    <string name="shortest_time">Shortest Time</string>
    <string name="info">info</string>
    <string name="how_to_p1">Simply move the tiles by swiping on the board. Two tiles with the same
        number merge when they touch. Reach the 2048 tile to win!</string>
    <string name="tile_movement">Tile Movement</string>
    <string name="how_to_p2">Swiping up, down, left, or right moves tiles in the direction swiped.
        Tiles with the same number will merge. All other tiles will move across any open space on
        the board. A new tile will be added to the board with each swipe. New tiles will be numbered
        2 or 4.</string>
    <string name="winning">Winning</string>
    <string name="how_to_p3">Reach the 2048 tile to win the game. The challenge continues as you
        reach even higher number tiles. The game ends when the board fills up and you can\'t make
        any more moves. The game will be paused and saved whenever you leave the board or exit the
        app.</string>
    <string name="statistics">Statistics</string>
    <string name="how_to_p4">See your detailed game stats by tapping Statistics on the home screen
        or on either score button above the game board.</string>
    <string name="great_features">Great Features</string>
    <string name="how_to_p5">On the home screen you can toggle the Sounds, Undo, and Swipe Anywhere
        features on/off with a tap. Swipe Anywhere enabled players to swipe anywhere on the screen
        (not just on the board).</string>
    <string name="about_2048">About 2048</string>
    <string name="about_p0">This is an unofficial mobile version of 2048, created by Carol Musyoka.</string>
    <string name="classic_play_or_time_trial">Classic play or Time trial</string>
    <string name="about_p1">Don\'t hesitate in Time trial play. The tiles won\'t wait for your move before they appear. Survive as long as you can. The game is over when the board fills up!</string>
    <string name="uses_open_source_assets_by_qat_vitriolix_breviceps_qubodup_and_kwahmah_02_from_freesound_org">Uses open-source assets by Qat, vitriolix, Breviceps, qubodup, and kwahmah_02 from freesound.org.</string>
</resources>
