<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StatisticsActivity"
    android:background="@color/offWhiteBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/statistics_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_chevron_left_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="back"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/stats_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/classic_stats"
            android:textColor="@color/textBrown"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_button" />

        <TextView
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/info"
            android:textColor="@color/tanBackground"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/stats_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_button"
            android:onClick="info"/>

        <TextView
            android:id="@+id/all_play"
            style="@style/statistics.header"
            android:layout_marginTop="8dp"
            android:text="@string/all_play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button" />

        <TextView
            android:id="@+id/best_score_text"
            style="@style/statistics.item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/all_play"
            android:text="@string/best_score"/>

        <TextView
            android:id="@+id/best_score_val"
            style="@style/statistics.item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/all_play"
            android:text="@string/default_score"/>

        <TextView
            android:id="@+id/total_score_text"
            style="@style/statistics.item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/best_score_text"
            android:text="@string/total_score"/>

        <TextView
            android:id="@+id/total_score_val"
            style="@style/statistics.item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/best_score_text"
            android:text="@string/default_score"/>

        <TextView
            android:id="@+id/top_tile_text"
            style="@style/statistics.item"
            android:layout_height="25dp"
            android:text="@string/top_tile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_score_text" />

        <TextView
            android:id="@+id/top_tile_val"
            style="@style/statistics.item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_score_text"
            android:text="@string/default_score"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_tile_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>